# outrider-ide

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.superpowers/sdd/: final-fix-report.md
crates/outrider/: Cargo.toml
crates/outrider-index/: Cargo.toml
crates/outrider-index/src/: buffer.rs  call_graph.rs  chunk.rs  churn.rs  dump.rs  index.rs  language.rs  lib.rs  parse.rs  scan.rs  types.rs
crates/outrider-index/src/type_resolve/: mod.rs  python.rs  typescript.rs
crates/outrider-index/tests/: churn_test.rs  dump_test.rs  index_test.rs  scan_test.rs
crates/outrider-index/tests/common/: mod.rs
crates/outrider-index/tests/fixtures/mini_repo/: README.md
crates/outrider-index/tests/fixtures/mini_repo/src/: lib.rs  util.rs
crates/outrider-layout/: Cargo.toml
crates/outrider-layout/src/: arrange.rs  lib.rs  measure.rs  pack.rs  progressive.rs  skyline.rs  types.rs  zones.rs
crates/outrider-layout/tests/: cross_process.rs  props_basic.rs  props_continuity.rs
crates/outrider/src/: buffers.rs  camera.rs  chrome.rs  content.rs  focus.rs  interaction.rs  layout_transition.rs  main.rs  navigation.rs  overlays.rs  paint_model.rs  palette.rs  project_loader.rs  project_settings.rs  rasterize.rs  settings.rs  texture_store.rs  theme.rs  treemap.rs  world.rs
docs/: code-comprehension-viewer-design.md
docs/superpowers/plans/: 2026-07-08-phase-0-platform-gate.md  2026-07-08-phase-0-verdict.md  2026-07-08-phase-1-outrider-index.md  2026-07-08-phase-2-outrider-layout.md  2026-07-08-phase-3-render-camera.md  2026-07-08-phase-4a-structural-navigation.md  2026-07-08-phase-4b-content-rungs.md  2026-07-08-screen-space-columns.md  2026-07-08-walking-skeleton-roadmap.md  2026-07-09-phase-4c-nested-rendering.md  2026-07-09-phase-4d-density-scaled-code.md  2026-07-09-spatial-treemap-pivot.md  2026-07-10-leaf-scaling-chunking-packing.md  2026-07-10-multi-language-support.md  2026-07-10-text-pages.md  2026-07-10-window-chrome-leaf-nav.md  2026-07-11-alpha-release.md  2026-07-11-cardinal-nav-highlight.md  2026-07-11-kind-grouped-packing.md  2026-07-11-navigation-commands.md  2026-07-11-source-order-doc-rank.md  2026-07-11-texture-doc-overlay.md  2026-07-11-texture-leaf-rendering.md  2026-07-12-focused-node-expansion.md  2026-07-13-readable-zoomed-headers.md  2026-07-13-reliability-cache-indexing.md  2026-07-16-cache-file-type-colors.md  2026-07-16-glsl-hlsl-support.md  2026-07-16-glsl-raytracing-extensions.md  2026-07-16-header-stack-content-clipping.md  2026-07-16-makefile-support.md  2026-07-16-multi-candidate-shelf-packing.md  2026-07-16-progressive-background-packing.md  2026-07-16-semantic-zones-skyline-packing.md
docs/superpowers/specs/: 2026-07-05-outrider-walking-skeleton-design.md  (+28 more)
scripts/: build-windows.ps1  build-windows.sh
(+1 files in other folders)
