[package]
name = "outrider-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ignore = "0.4.27"
rayon = "1.7"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-c = "0.24.2"
tree-sitter-md = "0.5.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"

[dev-dependencies]
tempfile = "3.27.0"
