[package]
name = "outrider"
version = "0.1.1"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# gpui and gpui_platform must stay pinned at the same rev; gpui_platform provides the entry point (application()) and the linux backend features
gpui = { git = "https://github.com/zed-industries/zed", rev = "029bf2f284b4e59f20175d78443e630468f3a3e5" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "029bf2f284b4e59f20175d78443e630468f3a3e5", features = ["wayland", "font-kit"] }
outrider-index = { path = "../outrider-index" }
outrider-layout = { path = "../outrider-layout" }
cosmic-text = "0.19"
image = "0.25"
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
trash = "5"

[dev-dependencies]
tempfile = "3.27.0"
